# Novella

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Novel  Novella  README.md  cmake_install.cmake  main.cpp
Core/: CMakeLists.txt  main.cpp
Core/Novella/Components/: Components.hpp
Core/Novella/Core/: Engine.hpp
Core/Novella/Project/: EngineConfig.hpp  Lexer.hpp  Project.hpp  Token.hpp
Core/Novella/Scene/: Handle.hpp  Scene.hpp  SceneManager.hpp  SceneWatcher.hpp  Slot.hpp
Core/Novella/Utils/: String.hpp
Core/src/: AudioBackend.cpp  AudioModule.cpp  AudioSystem.cpp  Button.cpp  ComponentFactory.cpp  CoreInitializer.cpp  DebugModule.cpp  DialogueBox.cpp  Engine.cpp  ExpressionEvaluator.cpp  FileSystem.cpp  FunctionExecutor.cpp  InputModule.cpp  InputSystem.cpp  Interpreter.cpp  Label.cpp  LayoutModule.cpp  LayoutSystem.cpp  Lexer.cpp  LinuxModule.cpp  NLexer.cpp  ObjectModule.cpp  PLexer.cpp  PParser.cpp  Parser.cpp  Project.cpp  PropertyExtractor.cpp  ResourceManager.cpp  Scene.cpp  SceneLoader.cpp  SceneManager.cpp  SceneModule.cpp  Sprite.cpp  SpriteModule.cpp  String.cpp  TextModule.cpp  Texture.cpp  TransformModule.cpp  Window.cpp  WindowModule.cpp
Editor/: electron-builder.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  window.py
Editor/UI/: App.tsx  index.css
Editor/UI/Components/: WindowDecoration.tsx
Editor/src/electron/: ipc.ts  main.ts  preload.ts  tsconfig.json  util.ts
Editor/src/types/: electron.d.ts
Examples/: button.nvs  example.nsc  hallway.nsc
Examples/MinimalProject/Scripts/: helloWorld.nvs
Novella/: Engine.hpp
Novella/Attribute/: Clickable.hpp  Interactable.hpp  Layoutable.hpp  Object.hpp
Novella/Audio/: AudioBackend.hpp  AudioResource.hpp  AudioSystem.hpp  Command.hpp  SoundRegistry.hpp
Novella/Commands/: Alias.hpp  AudioCommands.hpp  CommandContext.hpp  CommandEntry.hpp  CommandTable.hpp  DebuggingCommands.hpp  InputCommands.hpp  SceneCommands.hpp  Target.hpp  TransformationCommands.hpp  WindowCommands.hpp
Novella/Components/: Background.hpp  Button.hpp  Character.hpp  Clickable.hpp  DialogueBox.hpp  Interactable.hpp  Label.hpp  Object.hpp  Positionable.hpp  Renderable.hpp  Sprite.hpp  Transformable.hpp  Type.hpp
Novella/Components/Primitives/: Font.hpp  Image.hpp  Texture.hpp
Novella/Components/Traits/: Clickable.hpp  Interactable.hpp  Layoutable.hpp  Object.hpp  Renderable.hpp
Novella/Components/UI/: Button.hpp  DialogueBox.hpp  Label.hpp  (+1 more)
Novella/Core/: Engine.hpp
Novella/Debug/: Logger.hpp
Novella/Graphics/: Color.hpp  Font.hpp  Image.hpp  Texture.hpp
Novella/IO/: ComponentBuilder.hpp  FileReader.hpp  InputBuilder.hpp  InputOutputSystem.hpp  JsonSerializer.hpp  JsonValidator.hpp  SceneLoader.hpp
Novella/Input/: ActionCommand.hpp  ClickEvent.hpp  CommandDispatcher.hpp  InputSystem.hpp  InteractionSystem.hpp  KeyEvent.hpp  Keyboard.hpp  KeyboardRaylib.hh  Mouse.hpp  MouseRaylib.hh  MouseRaylib.hpp  Target.hpp
Novella/Layout/: Anchor.hpp  Layout.hpp  LayoutSystem.hpp  SizeMode.hpp
Novella/Math/: Rectangle.hpp  Vector2x.hpp
Novella/Platform/: Linux.hpp  Windows.hpp
Novella/Project/: EngineConfig.hpp  Parser.hpp  Project.hpp
Novella/Rendering/: Renderer.hpp  ResourceManager.hpp
Novella/Scene/: ObjectFactory.hpp  Scene.hpp  SceneBuilder.hpp  SceneManager.hpp
Novella/Utils/: FileReader.hpp  FileSystem.hpp
Novella/Window/: Context.hpp  Window.hpp  WindowFlags.hpp
Novella/Windowing/: Window.hpp  WindowFlags.hpp
docs/: gettingStarted.md
docs/Examples/: Window.nvp
src/: AudioBackend.cpp  AudioCommands.cpp  AudioModule.cpp  AudioSystem.cpp  Background.cpp  Button.cpp  Character.cpp  CommandContext.cpp  CommandDispatcher.cpp  CommandTable.cpp  ComponentBuilder.cpp  Converter.cpp  CoreInitializer.cpp  DebugModule.cpp  DebuggingCommands.cpp  Engine.cpp  EventHandler.cpp  ExpressionEvaluator.cpp  FileReader.cpp  FileSystem.cpp  FileSystemModule.cpp  Font.cpp  FunctionExecutor.cpp  Image.cpp  InputBuilder.cpp  InputCommands.cpp  InputModule.cpp  InputOutputSystem.cpp  InputSystem.cpp  InteractionSystem.cpp  Interpreter.cpp  JsonSerializer.cpp  JsonValidator.cpp  Label.cpp  LayoutModule.cpp  LayoutSystem.cpp  Lexer.cpp  Logger.cpp  MathModule.cpp  ModuleResolver.cpp  (+36 more)
(+142 files in other folders)
